Bug 1330515 - Try to recover from IME errors. r=esawin, a=lizzard

Instead of throwing IME exceptions, try to recover from IME errors by
flushing the entire text unless we already tried that before. This
prevents annoying crashes, and deals with known IME bugs that are too
risky to uplift to older releases.

--HG--
extra : source : fb6a2290e35d17db060dfe3c541ca04f3a6f9230